Convert migrate Moment.js → Luxon across app & server #15 - this completes https://github.com/nbarrett/ngx-ramblers/issues/15 - deps: add `luxon@3.7.2` and `@types/luxon`; remove `moment`, `moment-timezone`,   and `moment-locales-webpack-plugin` - build: drop custom-webpack builder & plugin; switch to   `@angular-devkit/build-angular:{browser,dev-server}`; remove   `custom-webpack.config.js`; stop copying it in Dockerfile - date-utils: reimplement `DateUtilsService` on Luxon   - `asMoment` → `asDateTime`, `momentNow` → `dateTimeNow`,     `momentNowNoTime` → `dateTimeNowNoTime`, etc.   - use `.toMillis()/.toISO()/.toFormat()` instead of `.valueOf()/.format()`   - DST-safe `calculateWalkDateAndTimeValue` using `isInDST`   - normalize AM/PM casing; unify Europe/London zone   - add `isoDateTimeNow()` method to centralize consistent ISO formatting - client: update components/pipes to Luxon APIs and tokens; replace moment calls in   editors, selectors, exports, and views   - fix NG0103 by caching `difficulties` and iterating over the property instead     of calling a method in the template   - ensure "Ascent" label renders (label placed outside directive host)   - add timepicker focus styles; minor template tidy-ups - server: replace moment usage in AWS, Brevo, Meetup, Ramblers API, audits, and   Serenity tasks; migrate `server/lib/shared/dates.ts` to use Luxon - tests: migrate to Luxon (`Settings.defaultZone = "Europe/London"`), update   format strings/expectations, add duration regression tests - fix: resolve date format regression where Luxon `.toISO()` includes milliseconds   causing false change detection in walk audit system - centralize all ISO date   formatting to use `suppressMilliseconds: true` - docs: reorganize AGENTS.md with better structure, remove duplications, and add   prominent AI assistant rules including commit message policy

--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,10 @@
   "private": true,
   "scripts": {
     "aws-backup": "ts-node aws-backup/backup-s3-images.ts",
+    "build": "npm run clean-ts && npm run tsc",
     "clean": "rimraf target/site/serenity",
     "clean-node": "rm -rf node_modules",
+    "clean-ts": "rimraf ts-gen",
     "deploy": "ts-node deploy/deploy-to-environments.ts",
     "lint": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish",
     "lintfix": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish --fix",
@@ -25,8 +27,9 @@
     "test": "failsafe serenity report",
     "tsc": "tsc --project ./tsconfig.json",
     "tsc-watch": "tsc --project ./tsconfig.json --watch",
-    "unit-test": ". test-setenv.sh && mocha  --watch",
-    "unit-test:once": "bash -lc 'source ./test-setenv.sh && mocha'"
+    "tsc-check": "tsc --project ./tsconfig.json --noEmit",
+    "unit-test": ". test-setenv.sh && npm run build && mocha --watch",
+    "unit-test:once": "bash -lc 'source ./test-setenv.sh && npm run build && mocha'"
   },
   "nodemonConfig": {
     "ignore": [
@@ -51,6 +54,7 @@
     "@types/inquirer": "9.0.8",
     "@types/jsonwebtoken": "9.0.6",
     "@types/lodash-es": "4.17.3",
+    "@types/luxon": "3.7.1",
     "@types/mailchimp__mailchimp_marketing": "3.0.9",
     "@types/mocha": "10.0.10",
     "@types/mongoose": "5.11.97",
@@ -87,11 +91,10 @@
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.20",
     "lodash-es": "4.17.21",
+    "luxon": "3.7.2",
     "matchdep": "0.3.0",
     "mkdirpsync": "0.1.0",
     "mocha": "11.1.0",
-    "moment": "2.19.3",
-    "moment-timezone": "0.5.13",
     "mongoose": "8.17.1",
     "mongoose-unique-validator": "5.0.1",
     "morgan": "1.9.1",
