--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fortawesome/free-solid-svg-icons": "6.1.0",
     "@ng-select/ng-select": "20.1.3",
     "@popperjs/core": "2.11.8",
+    "@types/luxon": "3.7.1",
     "@yaireo/tagify": "4.35.4",
     "bootstrap": "5.3.8",
     "core-js": "3.6.1",
@@ -51,11 +52,10 @@
     "jsonc-parser": "3.3.1",
     "leaflet": "1.9.4",
     "lodash-es": "4.17.21",
+    "luxon": "3.7.2",
     "marked": "16.2.1",
     "meetup-api": "1.4.38",
     "method-override": "3.0.0",
-    "moment": "2.24.0",
-    "moment-timezone": "0.5.27",
     "mongoose": "8.17.1",
     "ng-gallery": "11.0.0",
     "ng-recaptcha-2": "16.0.1",
@@ -97,7 +97,6 @@
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.5.1",
-    "moment-locales-webpack-plugin": "1.2.0",
     "source-map-explorer": "2.4.2",
     "ts-node": "10.9.2",
     "tslint": "6.1.3",
